[package]
name = "rust_09_networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
image = "0.25.1"
once_cell = "1.19.0"
serde = "1.0.202"
serde_cbor = "0.11.2"
serde_derive = "1.0.202"
static_init = "1.0.3"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]